--- a/style.css
+++ b/style.css
@@ -3,3 +3,44 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+	text-align: center;
+}
+
+img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+figcaption {
+	text-align: center;
+}
+
+#featured-property p {
+	 width: 800px;
+	 margin-left: auto;
+	 margin-right: auto;
+	 text-align: center;
+	 padding-top: 10px;
+	 padding-bottom: 10px;
+}
+
+nav { 
+	text-align: center;
+}
+
+nav a {
+	padding-left: 10px;
+	padding-right: 10px;
+	background-color: pink;
+}
+
+section#details div {
+	float: left;
+	background-color: pink;
+	text-align: center;
+	width: 25%;
+}
+
